// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`airtable survey responses basic response 1`] = `
Array [
  Object {
    "model": "survey_QuestionResponse",
    "record": Object {
      "respondent": null,
      "response": "5",
      "source": "Airtable",
      "submittedAt": "2023-10-09T14:09:37.000Z",
      "surveyQuestion": Object {
        "question": Object {
          "source": "Airtable",
          "uid": "app0z7JKgJ19t13fw-6db25b327d5bb72d56ee66a24c16abfbb8cad427cf53b07d9c4e054eadb9af42",
        },
        "survey": Object {
          "source": "Airtable",
          "uid": "app0z7JKgJ19t13fw",
        },
      },
      "team": null,
      "uid": "rec1",
    },
  },
  Object {
    "model": "survey_Survey",
    "record": Object {
      "description": null,
      "endedAt": null,
      "name": null,
      "source": "Airtable",
      "startedAt": null,
      "status": Object {
        "category": "Planned",
        "detail": "Planned",
      },
      "type": Object {
        "category": "Custom",
        "detail": null,
      },
      "uid": "app0z7JKgJ19t13fw",
    },
  },
  Object {
    "model": "survey_Question",
    "record": Object {
      "description": "How much do you like ice cream?",
      "question": "How much do you like ice cream?",
      "source": "Airtable",
      "uid": "app0z7JKgJ19t13fw-6db25b327d5bb72d56ee66a24c16abfbb8cad427cf53b07d9c4e054eadb9af42",
    },
  },
  Object {
    "model": "survey_SurveyQuestionAssociation",
    "record": Object {
      "order": 1,
      "question": Object {
        "source": "Airtable",
        "uid": "app0z7JKgJ19t13fw-6db25b327d5bb72d56ee66a24c16abfbb8cad427cf53b07d9c4e054eadb9af42",
      },
      "survey": Object {
        "source": "Airtable",
        "uid": "app0z7JKgJ19t13fw",
      },
    },
  },
]
`;

exports[`airtable survey responses survey metadata 1`] = `
Array [
  Object {
    "model": "survey_QuestionResponse",
    "record": Object {
      "respondent": null,
      "response": "5",
      "source": "Airtable",
      "submittedAt": "2023-10-09T14:09:37.000Z",
      "surveyQuestion": Object {
        "question": Object {
          "source": "Airtable",
          "uid": "app0z7JKgJ19t13fw-6db25b327d5bb72d56ee66a24c16abfbb8cad427cf53b07d9c4e054eadb9af42",
        },
        "survey": Object {
          "source": "Airtable",
          "uid": "app0z7JKgJ19t13fw",
        },
      },
      "team": null,
      "uid": "rec1",
    },
  },
  Object {
    "model": "survey_Survey",
    "record": Object {
      "description": null,
      "endedAt": null,
      "name": null,
      "source": "Airtable",
      "startedAt": null,
      "status": Object {
        "category": "Planned",
        "detail": "Planned",
      },
      "type": Object {
        "category": "Custom",
        "detail": null,
      },
      "uid": "app0z7JKgJ19t13fw",
    },
  },
  Object {
    "model": "survey_Question",
    "record": Object {
      "description": "How much do you like ice cream?",
      "question": "How much do you like ice cream?",
      "source": "Airtable",
      "uid": "app0z7JKgJ19t13fw-6db25b327d5bb72d56ee66a24c16abfbb8cad427cf53b07d9c4e054eadb9af42",
    },
  },
  Object {
    "model": "survey_SurveyQuestionAssociation",
    "record": Object {
      "order": 1,
      "question": Object {
        "source": "Airtable",
        "uid": "app0z7JKgJ19t13fw-6db25b327d5bb72d56ee66a24c16abfbb8cad427cf53b07d9c4e054eadb9af42",
      },
      "survey": Object {
        "source": "Airtable",
        "uid": "app0z7JKgJ19t13fw",
      },
    },
  },
  Object {
    "model": "survey_Survey__Update",
    "record": Object {
      "at": 1697242886829,
      "mask": Array [
        "stats",
      ],
      "patch": Object {
        "stats": Object {
          "invitationCount": 0,
          "questionCount": 1,
          "responseCount": 1,
        },
      },
      "where": Object {
        "source": "Airtable",
        "uid": "app0z7JKgJ19t13fw",
      },
    },
  },
  Object {
    "model": "survey_Survey__Update",
    "record": Object {
      "at": 1697242886829,
      "mask": Array [
        "name",
        "description",
        "type",
        "status",
        "startedAt",
        "endedAt",
      ],
      "patch": Object {
        "description": null,
        "endedAt": null,
        "name": "Survey1",
        "startedAt": null,
        "status": Object {
          "category": "Planned",
          "detail": "Planned",
        },
        "type": Object {
          "category": "ENPS",
          "detail": "ENPS",
        },
      },
      "where": Object {
        "source": "Airtable",
        "uid": "app0z7JKgJ19t13fw",
      },
    },
  },
]
`;
